<resources>
    <string name="app_name">ParentUI</string>
    <string name="name_here">Name Here</string>
    <string name="ayah">AYAH</string>
    <string name="dashboard">Dashboard</string>
    <string name="most_time_p">Most Time\n Play</string>
    <string name="some_id">01:25:20</string>
    <string name="education_res">Education\n Result</string>
    <string name="review">Review</string>
    <string name="sesuaikan_p">Sesuaikan Profil</string>
    <string name="profil_ortu">Profil Orang Tua</string>
    <string name="profil_anak">Profil Anak</string>
    <string name="usia_5_">USIA (5)</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="usia">USIA</string>
    <string name="parental_co">Parental Control</string>
    <string name="app_set">App Setting</string>
    <string name="faq">FAQ</string>
    <string name="get_help">Get Help</string>
    <string name="show_more">Show more</string>
    <string name="library_game">Library Game</string>
    <string name="waktu_tersimpan">Waktu Tersimpan</string>
    <string name="some_id_waktu_tersimpan">01:25:20</string>
    <string name="waktu_terbanyak">Waktu Terbanyak</string>
    <string name="some_id_waktu_terbanyak">01:25:20</string>
    <string name="waktu_bermain">Waktu Bermain</string>
    <string name="some_id_waktu_bermain">01:25:20</string>
    <string name="waktu_belajar">Waktu Belajar</string>
    <string name="some_id_waktu_belajar">01:25:20</string>
    <string name="riwayat">Riwayat</string>
    <string name="game_playing">Game Playing</string>
    <string name="some_id_game_playing">-00:25:20</string>
    <string name="learning1">Learning</string>
    <string name="some_id_learning1">+01:25:20</string>
    <string name="librarygame">Library Game</string>
    <string name="hello">Hello,</string>
    <string name="username_librarygame">Username</string>
    <string name="nama_game">Nama Game disini</string>
    <string name="nama_game_detail">Nama Game Disini</string>
    <string name="deskripsi_game">Deskripsi disini nanti panjang sesuai isinya dengan tujuan memberitahukan orang tua bahwa game ini cocok untuk laki laki atau perempuan dan akan mengajarkan apa saja nantinya dan banyak hal lainnya yang akan tertulis disini nantinya yah\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="most_game_playing">Most Game\nPlaying</string>
    <string name="hari_ini">Hari ini</string>
    <string name="daily1">1.</string>
    <string name="waktu1">02:40:40</string>
    <string name="daily2">2.</string>
    <string name="waktu2">01:40:40</string>
    <string name="daily3">3.</string>
</resources>